# flutter_micro_ecc

./: .gitignore  CHANGELOG.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
